test/langtools/tools/javac/SuperInit/EarlyInnerAccessErrorMessageTest.out
EarlyInnerAccessErrorMessageTest.java:22:34: compiler.err.cant.ref.before.ctor.called: x
1 error
